<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ccar</string>
    <string name="index">首页</string>
    <string name="exit">退出</string>
    <string name="spotCatalog">目录</string>
    <string name="spotlist">景点列表</string>
    <string name="AR">增强现实</string>
    <string name="navigation">景区导航</string>
    <string name="spotinfo">景点信息</string>
    <string name="mkdirs_error">创建目录失败！</string>
    <string name="copy_database_error">拷贝数据库文件失败！</string>
    <string name="database_not_initialized">数据库尚未初始化！</string>
    <string name="symbol_zoomin">+</string>
    <string name="symbol_zoomout">-</string>
    <string name="route_solve_error">查找路线失败！</string>
    <string name="no_route_solution_found">没有找到可行路线！</string>
    <string name="json_related_error">数据格式不正确！</string>
    <string name="nav">导航</string>
    <string name="clear_results">清除结果</string>
    <string name="range">范围</string>
</resources>
